<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dodoro.tw.myapplicationinclass.MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/editText1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/add_plus"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toRightOf="@+id/editText1"
        app:layout_constraintTop_toTopOf="@+id/editText1" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:onClick="click1"
        android:text="@string/add_equal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:onClick="click2"
        android:text="@string/change_page"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:onClick="click3"
        android:text="@string/btn_page"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:onClick="toPage3"
        android:text="@string/btn_third"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickweb"
        android:text="@string/btn_web"
        tools:layout_editor_absoluteY="58dp"
        android:layout_marginRight="1dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_marginTop="0dp"
        android:onClick="clicktel"
        android:text="@string/btn_tel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:layout_marginTop="0dp"
        android:onClick="clickmap"
        android:text="@string/btn_map"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-8dp"
        android:onClick="clickshare"
        android:text="@string/btn_share"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickforth"
        android:text="@string/btn_forth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickfive"
        android:text="@string/btn_five"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicksix"
        android:text="@string/btn_six"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickseven"
        android:text="@string/btn_seven"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickeight"
        android:text="@string/btn_eight"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickimage"
        android:text="Image"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        android:layout_marginLeft="7dp"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickwebvideo"
        android:text="WebVideo"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clicknine"
        android:text="NINE"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        app:layout_constraintLeft_toRightOf="@+id/button10"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickten"
        android:text="layout0"
        app:layout_constraintLeft_toRightOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickeleven"
        android:text="Eleven"
        app:layout_constraintLeft_toRightOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="-3dp"
        android:onClick="clicktwelve"
        android:text="twelve"
        app:layout_constraintLeft_toRightOf="@+id/button13"
        app:layout_constraintTop_toTopOf="@+id/button13" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:onClick="clickthirteen"
        android:text="thirteen"
        app:layout_constraintLeft_toRightOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:onClick="clickfourteen"
        android:text="fourteen"
        app:layout_constraintLeft_toRightOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickfifteen"
        android:text="fifteen"
        app:layout_constraintLeft_toRightOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicksixteen"
        android:text="sixteen"
        app:layout_constraintLeft_toRightOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:onClick="clickdrawerlayout"
        android:text="Drawerlayout"
        app:layout_constraintLeft_toRightOf="@+id/button18"
        app:layout_constraintTop_toTopOf="@+id/button18"
        android:layout_marginTop="-3dp" />

    <Button
        android:id="@+id/button35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clickseventeen"
        android:text="seventeen"
        app:layout_constraintLeft_toRightOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

</android.support.constraint.ConstraintLayout>
